<resources>
    <string name="app_name">Caique</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_test_amir">TestAmir</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="open_new_activity">Open new activity</string>
    <string name="send_message_to_server">Send a message to our server</string>
    <string name="chat">Chat ID</string>
    <string name="sender">Sender ID</string>
    <string name="type">Message Type</string>
    <string name="date">Date</string>
    <string name="text">Text</string>
    <string name="new_chat">Open new Chat (ID = 1)</string>
    <string name="music">Music</string>
    <string name="chats">Chats</string>
    <string name="contacts">Contacts</string>
    <string name="favorites">Favorites</string>
    <string name="invite">Invite</string>
    <string name="music_library">Music Library</string>
    <string name="settings">Settings</string>
    <string name="nav_group_name">Personal</string>
    <string name="nav_user_desc">Mail Placeholder</string>
    <string name="nav_user_title">Name Placeholder</string>
    <string name="desc">Caigue</string>
    <string name="title_activity_settings">Settings</string>
    <string name="download">Download</string>
    <string name="Picture">Go to Picture</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_new_chat">NewChatActivity</string>
</resources>
