<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_chats"
            android:icon="@drawable/ic_menu_chats"
            android:title="@string/chats"
            />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_menu_contacts"
            android:title="@string/contacts"
            />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_menu_favorites"
            android:title="@string/favorites"
            />
        <item
            android:id="@+id/nav_add_people"
            android:icon="@drawable/ic_menu_person_add"
            android:title="@string/add"
            />

    </group>
    <item android:title="@string/nav_group_name">
        <menu>
            <item
                android:id="@+id/nav_music_library"
                android:icon="@drawable/ic_menu_music_library"
                android:title="@string/music_library"
                />
            <item
                android:id="@+id/nav_search"
                android:icon="@drawable/ic_menu_search"
                android:title="@string/search"
                />
        </menu>
    </item>

</menu>
