<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="v6.caique.SendServerMessage"
    android:background="#fff">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/ChatId"
        android:hint="@string/chat"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/button2"
        android:layout_alignEnd="@+id/button2"
        android:inputType="text"
        android:text="-KSqbu0zMurmthzBE7GF"
        android:textColor="#000"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/SenderId"
        android:hint="@string/sender"
        android:layout_below="@+id/ChatId"
        android:layout_alignStart="@+id/ChatId"
        android:layout_alignEnd="@+id/ChatId"
        android:text="0"
        android:textColor="#000"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/MessageType"
        android:hint="@string/type"
        android:layout_below="@+id/SenderId"
        android:layout_alignStart="@+id/SenderId"
        android:layout_alignEnd="@+id/SenderId"
        android:textColorHint="#222"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/Date"
        android:hint="@string/date"
        android:layout_below="@+id/MessageType"
        android:layout_alignStart="@+id/MessageType"
        android:layout_alignEnd="@+id/SenderId"
        android:text="0"
        android:textColor="#000"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Text"
        android:hint="@string/text"
        android:layout_below="@+id/Date"
        android:layout_alignStart="@+id/Date"
        android:layout_alignEnd="@+id/Date"
        android:textColorHint="#222"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_message_to_server"
        android:id="@+id/button2"
        android:onClick="SendMessage"
        android:layout_below="@+id/Text"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccent"
        android:padding="16dp"
        android:textColor="#000"/>

</RelativeLayout>
